# opensearch-playground-cdk

./: Makefile  README.md  app.py  pyproject.toml
.github/workflows/: validation.yaml
assets/: doc_sample.json
cdk_opensearch_lambda_playground/: cdk_opensearch_lambda_playground_stack.py
notebooks/: export_data.py
src/: OpenSearchClient.py  compare_data.py  experiment_graphs.ipynb  export_data.py  os_hello_world.ipynb  raw_experiment_results.txt  read_data.py
tests/unit/: test_cdk_opensearch_lambda_playground_stack.py
