[tool.poetry]
name = "cdk-opensearch-lambda-playground"
version = "0.1.0"
description = ""
authors = ["Anatolii Burtsev <ab.canada.world@gmail.com>"]
readme = "README.md"
packages = [{include = "cdk_opensearch_lambda_playground"}]

[tool.poetry.dependencies]
python = "^3.11"
aws-cdk-lib = "^2.87.0"
constructs = ">=10.0.0,<11"
jupyter = "^1.0.0"
opensearch-py = "^2.2.0"
boto3 = "^1.28.3"
tqdm = "^4.65.0"
matplotlib = "^3.7.2"
pre-commit = "^3.3.3"
flake8 = "^6.0.0"
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.278"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# https://beta.ruff.rs/docs/configuration/
[tool.ruff]
line-length = 120
